--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-pdfviewer": "^27.1.55",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "firebase": "^11.0.1",
     "openai": "^4.68.4",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-just-parallax": "^3.1.16",
+    "react-pdftotext": "^1.3.3",
     "react-router-dom": "^6.27.0",
     "scroll-lock": "^2.1.5"
   },
